Started experimenting with jdk-8 in an effort to implement backwards compatibility (#47, #40)